Aggiunto mongoose per i tre metodi in /api/user Documentazione
