# pages/api/user/index.js
@@ -1,4 +1,5 @@
-import clientPromise from "../../../lib/mongodb";
+import dbConnect from "../../../lib/dbConnect";
+import UtenteAutenticato from "../../../models/UtenteAutenticato";
 
 export default function handler(req, res) {
   if (req.method === "POST") {
@@ -40,25 +41,8 @@ export default function handler(req, res) {
  *             success:
  *               type: string
  *               example: User inserted correctly
- *       202 :
- *         description: Se e' stato trovato piu di un account con la stessa email o userId, verra restituito "There is alrady one user with that id or email" <br>Se non e' stato inserito l'utente verra restituito "Not inserted"
- *         content:
- *          application/json:
- *           schema:
- *            oneOf:
- *             - $ref: '#/components/schemas/utenteGiaEsistente'
- *             - $ref: '#/components/schemas/erroreInserimento'
- *           examples:
- *            utenteGiaEsistente:
- *             summary: Esiste gia un utente con l'userId o email
- *             value:
- *              error: There is alrady one user with that id or email
- *            erroreInserimento:
- *             summary: Utente non inserito
- *             value:
- *              error: Not inserted
- *       500:
- *         description: error di connessione al database, verra restituito "Connection error"
+ *       400:
+ *         description: Manca uno o piu parametri, verra restituito "Parameter missing"
  *         content:
  *          application/json:
  *           schema:
@@ -66,9 +50,39 @@ export default function handler(req, res) {
  *            properties:
  *             error:
  *               type: string
- *               example: Connection error
+ *               example: Parameter missing
+ *       409:
+ *         description: Se e' stato trovato piu di un account con la stessa email o userId, verra restituito "There is alrady one user with that id or email"
+ *         content:
+ *          application/json:
+ *           schema:
+ *            type: object
+ *            properties:
+ *             error:
+ *               type: string
+ *               example: There is alrady one user with that id or email
+ *       500:
+ *         description: Errore di inserimento nel database, verra restituito "Not inserted"
+ *         content:
+ *          application/json:
+ *           schema:
+ *            type: object
+ *            properties:
+ *             error:
+ *               type: string
+ *               example: Not inserted
+ *       501:
+ *         description: Errore generico, verra restituito "Generic error"
+ *         content:
+ *          application/json:
+ *           schema:
+ *            type: object
+ *            properties:
+ *             error:
+ *               type: string
+ *               example: Generic error
  *   put:
- *     description: Ritorna userId, email, username di un utente dato l'email
+ *     description: Modifica l'username di un utente dato l'userId e username
  *     parameters:
  *       - name: userId
  *         in: query
@@ -81,7 +95,7 @@ export default function handler(req, res) {
  *
  *     responses:
  *       200:
- *         description: Sostituisce l'username dell'account, viene restituito "User updated correctly"
+ *         description: Username aggiornato con successo, verra restituito "User updated correctly"
  *         content:
  *          application/json:
  *           schema:
@@ -90,18 +104,8 @@ export default function handler(req, res) {
  *             success:
  *               type: string
  *               example: User updated correctly
- *       202 :
- *         description: Se il record non viene modificato, oppure piu di un record viene modificato, viene restituito "Not inserted"<br>
- *         content:
- *          application/json:
- *           schema:
- *            type: object
- *            properties:
- *             success:
- *               type: string
- *               example: Not edited
- *       500:
- *         description: error di connessione al database, verra restituito "Connection error"
+ *       400:
+ *         description: Manca uno o piu parametri, verra restituito "Parameter missing"
  *         content:
  *          application/json:
  *           schema:
@@ -109,7 +113,44 @@ export default function handler(req, res) {
  *            properties:
  *             error:
  *               type: string
- *               example: Connection error
+ *               example: Parameter missing
+ *       409:
+ *         description: Se non e' stato trovato neanche un account con l'userId dato, verra restituito "There is no user with that userId" <br>Se e' stato trovato piu di un account con lo stesso userId, verra restituito "There are too many users with that userId"
+ *         content:
+ *          application/json:
+ *           schema:
+ *            anyOf:
+ *             - $ref: '#/components/schemas/Errore1'
+ *             - $ref: '#/components/schemas/Errore2'
+ *           examples:
+ *            Errore1:
+ *             summary: Piu utenti con lo stesso userId
+ *             value:
+ *              error: There are too many users with that userId
+ *            Errore2:
+ *             summary: Neanche un utente con l'userId specificato
+ *             value:
+ *              error: There is no user with that userId
+ *       500:
+ *         description: Errore di modifica nel database, verra restituito "Not edited"
+ *         content:
+ *          application/json:
+ *           schema:
+ *            type: object
+ *            properties:
+ *             error:
+ *               type: string
+ *               example: Not edited
+ *       501:
+ *         description: Errore generico, verra restituito "Generic error"
+ *         content:
+ *          application/json:
+ *           schema:
+ *            type: object
+ *            properties:
+ *             error:
+ *               type: string
+ *               example: Generic error
  *   delete:
  *     description: Elimina un utente dato l'userId
  *     parameters:
@@ -120,7 +161,7 @@ export default function handler(req, res) {
  *
  *     responses:
  *       200:
- *         description: Utente eliminato correttamente
+ *         description: Username eliminato con successo, verra restituito "User deleted correctly"
  *         content:
  *          application/json:
  *           schema:
@@ -129,8 +170,35 @@ export default function handler(req, res) {
  *             success:
  *               type: string
  *               example: User deleted correctly
- *       202 :
- *         description: Se e' stato trovato piu di un account con la stessa email, verra restituito "More than one user with that email" <br>Se non e' stato trovato nessun account con l'email, verra restituito "No such user"
+ *       400:
+ *         description: Manca uno o piu parametri, verra restituito "Parameter missing"
+ *         content:
+ *          application/json:
+ *           schema:
+ *            type: object
+ *            properties:
+ *             error:
+ *               type: string
+ *               example: Parameter missing
+ *       409:
+ *         description: Se non e' stato trovato neanche un account con l'userId dato, verra restituito "There is no user with that userId" <br>Se e' stato trovato piu di un account con lo stesso userId, verra restituito "There are too many users with that userId"
+ *         content:
+ *          application/json:
+ *           schema:
+ *            anyOf:
+ *             - $ref: '#/components/schemas/Errore1'
+ *             - $ref: '#/components/schemas/Errore2'
+ *           examples:
+ *            Errore1:
+ *             summary: Piu utenti con lo stesso userId
+ *             value:
+ *              error: There are too many users with that userId
+ *            Errore2:
+ *             summary: Neanche un utente con l'userId specificato
+ *             value:
+ *              error: There is no user with that userId
+ *       500:
+ *         description: Errore di eliminazione nel database, verra restituito "User not deleted"
  *         content:
  *          application/json:
  *           schema:
@@ -139,8 +207,8 @@ export default function handler(req, res) {
  *             error:
  *               type: string
  *               example: User not deleted
- *       500:
- *         description: error di connessione al database, verra restituito "Connection error"
+ *       501:
+ *         description: Errore generico, verra restituito "Generic error"
  *         content:
  *          application/json:
  *           schema:
@@ -148,92 +216,139 @@ export default function handler(req, res) {
  *            properties:
  *             error:
  *               type: string
- *               example: Connection error
+ *               example: Generic error
+ * components:
+ *  schemas:
+ *    Errore1:
+ *      type: object
+ *      properties:
+ *        error:
+ *          type: string
+ *    Errore2:
+ *      type: object
+ *      properties:
+ *        error:
+ *          type: string
  */
 
 async function postUser(req, res) {
+  await dbConnect();
   try {
-    const client = await clientPromise;
-    const collection = client.db("PlanIt").collection("user");
-
     const { userId, email, username } = req.query;
 
-    const user = await collection
-      .find({ $or: [{ userId: userId }, { email: email }] })
-      .toArray();
+    if (userId == null || email == null || username == null) {
+      res.status(400).json({ error: "Parameter missing" });
+      return;
+    }
 
-    if (Object.keys(user).length >= 1) {
+    const users = await UtenteAutenticato.find({
+      $or: [{ userId: userId }, { email: email }],
+    });
+    if (Object.keys(users).length >= 1) {
       res
-        .status(202)
+        .status(409)
         .json({ error: "There is alrady one user with that id or email" });
-    } else {
-      const post = await collection.insertOne({
+      return;
+    }
+
+    UtenteAutenticato.create(
+      {
         userId: userId,
         email: email,
         username: username,
-      });
-      if (post.insertedCount == 1) {
-        res.status(200).json({ success: "User inserted correctly" });
-      } else {
-        res.status(202).json({ error: "Not inserted" });
-      }
-    }
+      },
+      function (err, user) {
+        if (err) {
+          res.status(500).json({ error: "Not inserted" });
+          return;
+        }
+      },
+    );
+    res.status(200).json({ success: "User inserted correctly" });
+    return;
   } catch (e) {
     console.error(e);
-    res.status(500).json({ error: "Connection error" });
+    res.status(501).json({ error: "Generic error" });
     throw new Error(e).message;
   }
 }
 
 async function putUser(req, res) {
+  await dbConnect();
   try {
-    const client = await clientPromise;
-    const collection = client.db("PlanIt").collection("user");
+    const { userId, username } = req.query;
 
-    // In caso si volesse cambiare anche la mail
+    if (userId == null || username == null) {
+      res.status(400).json({ error: "Parameter missing" });
+      return;
+    }
 
-    const { userId, /*email,*/ username } = req.query;
-    /*const emailCheck = await collection.find({ email: email }).toArray();
-    if (Object.keys(emailCheck).length > 1) {
+    const users = await UtenteAutenticato.find({
+    userId: userId    });
+    if (Object.keys(users).length == 0) {
       res
-        .status(202)
-        .json({ error: "There is alrady one user with that email" });
-    } else if (Object.keys(emailCheck).length == 0) {*/
-    const put = await collection.updateMany(
+        .status(409)
+        .json({ error: "There is no user with that userId" });
+      return;
+    } else if (Object.keys(users).length > 1) {
+      res
+        .status(409)
+        .json({ error: "There are too many users with that userId" });
+      return;
+    }
+
+    const put = await UtenteAutenticato.updateMany(
       { userId: userId },
-      //{ $set: {email: email, username: username } },
       { $set: { username: username } },
     );
 
-    if (put.result.nModified == 1) {
+    if (put.modifiedCount == 1) {
       res.status(200).json({ success: "User updated correctly" });
     } else {
-      res.status(202).json({ error: "Not edited" });
+      res.status(500).json({ error: "Not edited" });
     }
-    //}
   } catch (e) {
     console.error(e);
-    res.status(500).json({ error: "Connection error" });
+    res.status(501).json({ error: "Generic error" });
     throw new Error(e).message;
   }
 }
 
 async function deleteUser(req, res) {
+  await dbConnect();
   try {
-    const client = await clientPromise;
-    const collection = client.db("PlanIt").collection("user");
-
     const { userId } = req.query;
-    const deleteUser = await collection.remove({ userId: userId });
 
-    if (deleteUser.result.n >= 1) {
+    if (userId == null) {
+      res.status(400).json({ error: "Parameter missing" });
+      return;
+    }
+
+    const users = await UtenteAutenticato.find({
+      userId: userId,
+    });
+    if (Object.keys(users).length == 0) {
+      res.status(409).json({ error: "There is no user with that userId" });
+      return;
+    } else if (Object.keys(users).length > 1) {
+      res
+        .status(409)
+        .json({ error: "There are too many users with that userId" });
+      return;
+    }
+
+    const deleteUser = await UtenteAutenticato.remove({ userId: userId });
+
+    if (deleteUser.deletedCount >= 1) {
       res.status(200).json({ success: "User deleted correctly" });
+      return;
     } else {
-      res.status(202).json({ error: "User not deleted" });
+      res.status(500).json({ error: "User not deleted" });
+      return;
     }
   } catch (e) {
     console.error(e);
-    res.status(500).json({ error: "Connection error" });
+    res.status(501).json({ error: "Generic error" });
     throw new Error(e).message;
   }
 }
